--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
     <h4 class="brief-description">Creating modern and responsive websites with a focus on user experience
     </h4>
     <p class="tittle-two">Web Developer | Designer | Tech Enthusiast</p>
-    <div class="general-button">
-      <div class="title">
-        <a href="#projects" ><button>View My Work</button></a>
-      </div>
 
-      <div class="resume">
-        <a href="https://gold-hally-60.tiiny.site/" target="_blank">Download Cv</a>
-      </div>
+    <div class="title">
+      <a href="#projects"><button>View My Work</button></a>
 
-      
+      <a href="https://gold-hally-60.tiiny.site/" target="_blank"><button>Download Cv</button></a>
+    </div>
+
+
+
 
     </div>
 
@@ -47,14 +46,14 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contacts">Contact</a></li>
       </ul>
-      <!-- Hamburger-Menu -->
-      </div>
-      </div>
-      <button class="hamburger">
-        <div class="bar">
-
+      <!- - Hamburger-Menu -->
         </div>
-      </button>
+        </div>
+        <button class="hamburger">
+          <div class="bar">
+
+          </div>
+        </button>
     </nav>
   </header>
   <nav class="mobile-nav">
